--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -41,8 +41,9 @@ jobs:
         run: bundle install
 
       - name: Configure database
+        working-directory: ./onlibrary
         run: |
-          cp config/database.yml.example config/database.yml
+          cp /config/database.yml.example config/database.yml
           sed -i 's/password/password/' config/database.yml # Заменяем пароль в config/database.yml
           bundle exec rails db:create db:migrate # Создаем и мигрируем базу данных
 
