--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -43,8 +43,8 @@ jobs:
       - name: Configure database
         working-directory: ./onlibrary
         run: |
-          cp /config/database.yml.example config/database.yml
-          sed -i 's/password/password/' config/database.yml # Заменяем пароль в config/database.yml
+          cp /onlibrary/config/database.yml.example config/database.yml
+          sed -i 's/password/password/' onlibrary/config/database.yml # Заменяем пароль в config/database.yml
           bundle exec rails db:create db:migrate # Создаем и мигрируем базу данных
 
       - name: Run tests
