--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -46,6 +46,7 @@ jobs:
           cp config/database.yml.example config/database.yml
           sed -i 's/password/password/' config/database.yml # Заменяем пароль в config/database.yml
           bundle exec rails db:create db:migrate # Создаем и мигрируем базу данных
+          rails db:migrate
 
       - name: Run tests
         working-directory: ./onlibrary
