--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -45,8 +45,8 @@ jobs:
         run: |
           cp config/database.yml.example config/database.yml
           sed -i 's/password/password/' config/database.yml # Заменяем пароль в config/database.yml
-          bundle exec rails db:create db:migrate # Создаем и мигрируем базу данных
-          rails db:migrate
+          bundle exec rails db:create
+          bundle exec rails db:migrate
 
       - name: Run tests
         working-directory: ./onlibrary
