--- a/onlibrary/config/database.yml
+++ b/onlibrary/config/database.yml
@@ -85,6 +85,7 @@ test:
 production:
   primary: &primary_production
     <<: *default
+    url: <%= ENV["DATABASE_URL"] %>
     database: onlibrary_production
     username: onlibrary
     password: <%= ENV["ONLIBRARY_DATABASE_PASSWORD"] %>
