--- a/onlibrary/render.yaml
+++ b/onlibrary/render.yaml
@@ -1,21 +1,26 @@
 databases:
-  - name: onlibrary
-    databaseName: onlibrary
-    user: onlibrary
-    plan: free
+  - name: onlibrary-production
+    ipAllowList: []
 
 services:
   - type: web
     name: onlibrary
-    runtime: ruby
+    env: ruby
     plan: free
     buildCommand: "./bin/render-build.sh"
-    startCommand: "bundle exec rails server"
+    startCommand: bundle exec rails s
     envVars:
+      - key: RAILS_MASTER_KEY
+        sync: false
       - key: DATABASE_URL
         fromDatabase:
-          name: onlibrary
+          name: onlibrary-production
           property: connectionString
-      - key: RAILS_MASTER_KEY
-        sync:false- key: WEB_CONCURRENCY
-        value: 2
+
+  - type: redis
+    name: redis
+    ipAllowList: []
+    plan: free
+    maxmemoryPolicy: noeviction
+
+
